--- a/style.css
+++ b/style.css
@@ -16,23 +16,55 @@ body {
 
 h1 {
     color: #fff;
-    margin-bottom: 1.5rem;
+    margin-bottom: 20px;
 }
 
 .keys {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 1rem;
+    gap: 10px;
 }
 
 .key {
-    width: 5rem;
-    height: 5rem;
+    width: 80px;
+    height: 80px;
     border: 2px solid #fff;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.7rem;
+    font-size: 30px;
     font-weight: bold;
+}
+
+.key.active {
+    border: 2px solid #FF0;
+    color: #FF0;
+}
+
+.composer {
+    width: 260px;
+    margin-top: 20px;
+}
+
+.composer #input {
+    width: 100%;
+    outline: none;
+    font-size: 17px;
+    padding: 10px 15px;
+}
+
+.composer button {
+    width: 100%;
+    height: 40px;
+    background: none;
+    border: 2px solid #fff;
+    color: #fff;
+    font-size: 16px;
+    margin-top: 10px;
+    cursor: pointer;
+}
+
+.composer button:hover {
+    background-color: rgba(0, 0, 0, 0.2);
 }
 
