--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #555;
+    background-color: #656077;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -37,8 +37,8 @@ h1 {
 }
 
 .key.active {
-    border: 2px solid #FF0;
-    color: #FF0;
+    border: 2px solid #22ac00e7;
+    color: #22ac00e7;
 }
 
 .composer {
@@ -68,3 +68,8 @@ h1 {
     background-color: rgba(0, 0, 0, 0.2);
 }
 
+footer {
+    margin-top: 20px;
+    color: #fff;
+    font-size: 13px;
+}
